# forecast_net_revenue

./: README.md  pyproject.toml
data/interim/: results_model.csv
doc/: Teste_Cientista_de_Dados.docx  project.pptx
notebooks/: 1.0_cycle.ipynb  1.0_kf_eda.ipynb  first_cycle.ipynb
parameter/: boxes_encoding.joblib  customer_acquisition_channel_encoding.joblib
