[tool.poetry]
name = "just_little"
version = "0.1.0"
description = ""
authors = ["KaissonFerreira <kaysson_17@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
seaborn = "^0.11.2"


[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
